# electroncooling

./: .cproject  .project  CMakeLists.txt  Developer manual.md  DeveloperManual.md  Readme.md  optimize_example.in
data/: BetacoolErlangen_F.txt  BetacoolErlangen_FS.txt  BetacoolErlangen_FT.txt  BetacoolErlangen_FTS.txt  BetacoolErlangen_S.txt  BetacoolErlangen_T.txt  BetacoolErlangen_TS.txt  BetacoolErlangen_tr_F.txt  BetacoolErlangen_tr_FS.txt  BetacoolErlangen_tr_FT.txt  BetacoolErlangen_tr_FTS.txt  BetacoolErlangen_tr_S.txt  BetacoolErlangen_tr_T.txt  BetacoolErlangen_tr_TS.txt  dumpDS.txt  dumpMesh.txt  dumpPark.txt
include/: beam.h  beamshape.h  constants.h  cooler.h  dynamic.h  ecooling.h  fit.h  force.h  ibs.h  optimize.h  particle_model.h  ui.h
src/: arbitrary_electron_beam.cc  beam.cc  beamshape.cc  dynamic.cc  ecooling.cc  fit.cc  force.cc  functions.cc  ibs.cc  main.cc  optimize.cc  particle_model.cc  ui.cc
tests/: .gitignore  Base.hh.in  CMakeLists.txt  test_beam.cc  test_ecooling.cc  test_eic.cc  test_fits.cc  test_functions.cc  test_jspec.cc
